@@ -15,6 +15,7 @@ version ? (????-??-??):
   - helpdesk: added notes to tickets (alec)
   - helpdesk: new note/message e-mail notification on demand (alec)
   - lms-payments, lmsd/payments: fixed problem with discounts invoicing (alec)
+  - traffic filter: we can filtering stats by customer (chilek)
 
 version 1.9.6 Belos (2007-02-16):
 
